<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    tools:context=".CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/cart_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:maxLines="2"
        android:text="@string/address"
        android:padding="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_total_price"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cart_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/blue_800"
                android:textSize="18sp"
                android:layout_marginStart="@dimen/_3sdp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_rs"
                android:textColor="@color/black"
                android:textSize="9sp"
                android:layout_marginStart="@dimen/_1sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/cart_place_order_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cart_place_order"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>