<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_18sdp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/blue_800"
            android:textAlignment="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:passwordToggleTint="@color/blue_800"
            android:textColorHint="@color/blue_800"
            android:hint="@string/email"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@null">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:passwordToggleTint="@color/blue_800"
            android:textColorHint="@color/blue_800"
            android:hint="@string/name"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@null">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_layout_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue_800"
            android:textColorHint="@color/blue_800"
            android:hint="@string/pass"
            app:boxBackgroundColor="@null"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleDrawable="@drawable/eye_foreground">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/rect_round"/>
    </LinearLayout>
    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/login_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_20sdp"/>

</RelativeLayout>