<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/add_iv"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/add_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="@color/blue_800"
        android:hint="@string/add_name"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/add_amount_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@null">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/blue_800"
        android:hint="@string/add_amount"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/add_category_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:singleLine="true"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleTint="@color/blue_800"
        android:textColorHint="@color/blue_800"
        android:hint="@string/add_category"
        app:errorEnabled="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/add_description_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@null">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/blue_800"
        android:hint="@string/add_description"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:maxLines="3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item_btn"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>