<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:elevation="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/product_iv"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"/>
        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"
            android:text="@string/p_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_5sdp">
            <TextView
                android:id="@+id/product_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/blue_800"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/item_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_rs"
                android:textSize="10sp"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_2sdp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/add_to_cart"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/product_save"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="0.2"
                android:layout_gravity="center_vertical"
                android:src="@drawable/save_foreground"/>
        </LinearLayout>

        <TextView
            android:id="@+id/product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/product_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>