<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    tools:context=".WishlistActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/wishlist_cart_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/wishlist_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/wishlist_tv"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wishlist_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wishlist_tv" />

            <TextView
                android:id="@+id/wishlist_suggested_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/wishlist_suggested_tv"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wishlist_recycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wishlist_suggested_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wishlist_suggested_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/wishlist_cart_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_grey_700"
        android:text="@string/wishlist_cart_visit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="@dimen/_3sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>